h4s no longer right-aligned

--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,6 @@ pre code {
 		content: ' - ';
 	}
 
-.content h4 {
-	text-align: right;
-}
-
 .hl-line {
 	display: block;
 	background-color: #C7ECFC;
